components/monitoring/grafana/manifests/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garden-grafana
  namespace: (( values.namespace ))
  labels:
    app: monitoring
    role: grafana
    context: garden
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: monitoring
    role: grafana
    context: garden
