components/monitoring/grafana/manifests/60-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garden-grafana
  namespace: (( values.namespace ))
  labels:
    app: monitoring
    role: grafana
    context: garden
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: garden-grafana-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
spec:
  rules:
  - host: (( .settings.grafana_domain ))
    http:
      paths:
      - backend:
          service:
            name: garden-grafana
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - (( .settings.grafana_domain ))
    secretName: (( .imports.cert.export.certificate.secret_name ))
